improved code in build.gradle and tests